--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,8 +17,9 @@
           <li><a href="/" class="left brand-logo">&nbsp;&nbsp;BunnyCollector</a></li>
         </ul>
         <ul class="right">
-          <li><a href="/about">About</a></li>
-          <li><a href="/bunnies">View All My Bunnies</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'bunnies_create' %}">Add a Bunny</a></li>
+          <li><a href="{% url 'index' %}">View All My Bunnies</a></li>
         </ul>
       </div>
     </nav>
