--- a/main_app/templates/bunnies/index.html
+++ b/main_app/templates/bunnies/index.html
@@ -5,7 +5,7 @@
 
 {% for bunny in bunnies %}
   <div class="card">
-    <a href="{% url 'detail' bunny.id %}">
+    <a href="{% url 'detail' bunny.id %}"></a>
       <div class="card-content">
         <span class="card-title">{{ bunny.name }}</span>
         <p>Breed: {{ bunny.breed }}</p>
@@ -15,6 +15,10 @@
         {% else %}
           <p>Age: Bunny</p>
         {% endif %}
+      </div>
+      <div class="card-action">
+        <a href="{% url 'bunnies_update' bunny.id %}">Edit</a>
+        <a href="{% url 'bunnies_delete' bunny.id %}">Delete</a>
       </div>
     </a>
   </div>
