--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -8,6 +8,8 @@
   <title>Bunny Collector</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Piazzolla:wght@200;300&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="navbar-fixed">
@@ -18,6 +20,8 @@
         </ul>
         <ul class="right">
           <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
+          <li><a href="{% url 'toys_index' %}">View All Toys</a></li>
           <li><a href="{% url 'bunnies_create' %}">Add a Bunny</a></li>
           <li><a href="{% url 'index' %}">View All My Bunnies</a></li>
         </ul>
