--- a/main_app/templates/bunnies/index.html
+++ b/main_app/templates/bunnies/index.html
@@ -5,7 +5,7 @@
 
 {% for bunny in bunnies %}
   <div class="card">
-    <a href="{% url 'detail' bunny.id %}"></a>
+    <a href="{% url 'detail' bunny.id %}">
       <div class="card-content">
         <span class="card-title">{{ bunny.name }}</span>
         <p>Breed: {{ bunny.breed }}</p>
