--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -29,3 +29,20 @@ a {
 .card-action {
   color: black;
 }
+
+.breed-container {
+  display: grid;
+  grid-template-columns: repeat(4, 4fr);
+  justify-items: center;
+  justify-content: center;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.breed-card {
+  min-width: 370px;
+  min-height: 350px;
+  max-height: 350px;
+  max-width: 370px;
+  margin: 10px;
+}
