--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,6 +20,7 @@
         </ul>
         <ul class="right">
           <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'bunny_breed_list' %}">View Bunny Breeds</a></li>
           <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
           <li><a href="{% url 'toys_index' %}">View All Toys</a></li>
           <li><a href="{% url 'bunnies_create' %}">Add a Bunny</a></li>
