--- a/main_app/templates/bunnies/detail.html
+++ b/main_app/templates/bunnies/detail.html
@@ -1,61 +1,112 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1> Bunny Details</h1>
+<h1>Bunny Details</h1>
 
 <div class="row">
-  <div class="col s6">
-    <div class="card">
-      <div class="card-content">
-        <span class="card-title">{{ bunny.name }}</span>
-        <p>Breed: {{ bunny.breed }}</p>
-        <p>Description: {{ bunny.description }}</p>
-        {% if bunny.age > 0 %}
-          <p>Age: {{ bunny.age }}</p>
-        {% else %}
-          <p>Age: Bunny</p>
-        {% endif %}
-      </div>
-      <div class="card-action">
-        <a href="{% url 'bunnies_update' bunny.id %}">Edit</a>
-        <a href="{% url 'bunnies_delete' bunny.id %}">Delete</a>
-      </div>
+    <div class="col s6">
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">{{ bunny.name }}</span>
+                <p>Breed: {{ bunny.breed }}</p>
+                <p>Description: {{ bunny.description }}</p>
+                {% if bunny.age > 0 %}
+                <p>Age: {{ bunny.age }}</p>
+                {% else %}
+                <p>Age: Kitten</p>
+                {% endif %}
+            </div>
+            <div class="card-action">
+                <a href="{% url 'bunnies_update' bunny.id %}">Edit</a>
+                <a href="{% url 'bunnies_delete' bunny.id %}">Delete</a>
+            </div>
+        </div>
     </div>
-  </div>
-  <div class="col s6">
-    <form action="{% url 'add_feeding' bunny.id %}" method="post">
-        {% csrf_token %}
-        {{ feeding_form.as_p }}
-        <input type="submit" class="btn" value="Add Feeding">
-    </form>
-    <table class="striped">
-      <thead>
-        <tr><th>Date</th><th>Meal</th></tr>
-      </thead>
-      <tbody>
-        {% for feeding in bunny.feeding_set.all %}
-          <tr>
-            <td>{{feeding.date}}</td>
-            <td>{{feeding.get_meal_display}}</td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
+    <div class="col s6">
+        <form action="{% url 'add_feeding' bunny.id %}" method="post">
+            {% csrf_token %}
+            {{ feeding_form.as_p }}
+            <input type="submit" class="btn" value="Add Feeding">
+        </form>
+        <br>
+        {% if bunny.fed_for_today %}
+        <div class="card-panel teal-text center-align">{{bunny.name}} has been fed all meals for today</div>
+        {% else %}
+        <div class="card-panel red-text center-align">{{bunny.name}} might be hungry</div>
+        {% endif %}
+        <table class="striped">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Meal</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for feeding in bunny.feeding_set.all %}
+                <tr>
+                    <td>{{feeding.date}}</td>
+                    <td>{{feeding.get_meal_display}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </div>
-
+<hr>
+<div class="row">
+    <div class="col s6">
+        <h3>{{ bunny.name }}'s Toys</h3>
+        {% if bunny.toys.count %}
+        {% for toy in bunny.toys.all %}
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">
+                    A <span style="color: {{ toy.color }}">{{ toy.color }}</span> {{ toy.name }}
+                </span>
+            </div>
+        </div>
+        {% endfor %}
+        {% else %}
+        <h5>No Toys :(</h5>
+        {% endif %}
+    </div>
+    <!-- Available toys will come after this line -->
+    <div class="col s6">
+        <h3>Available Toys</h3>
+        {% if toys.count %}
+        {% for toy in toys.all %}
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">
+                    A <span style="color: {{ toy.color }}">{{ toy.color }}</span> {{ toy.name }}
+                </span>
+            </div>
+            <div class="card-action">
+                <form action="{% url 'assoc_toy' bunny.id toy.id %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="btn">Add</button>
+                </form>
+            </div>
+        </div>
+        {% endfor %}
+        {% else %}
+        <h5>{{bunny.name}} Already Has All Toys Available</h5>
+        {% endif %}
+    </div>
+</div>
+<!-- JS to create a date picker and init the meal dropdown -->
 <script>
+    // create a datepicker
     var dateEl = document.getElementById('id_date');
     M.Datepicker.init(dateEl, {
-      format: 'yyyy-mm-dd',
-      defaultDate: new Date(),
-      setDefaultDate: true,
-      autoClose: true
+        format: 'yyyy-mm-dd',
+        defaultDate: new Date(),
+        setDefaultDate: true,
+        autoClose: true
     });
-  
-    // add additional JS to initialize select below
+
+    // initialize the meal select
     var selectEl = document.getElementById('id_meal');
     M.FormSelect.init(selectEl);
 </script>
-  
 {% endblock %}
